aded footer partial

--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -656,3 +656,5 @@ object {
 # Page Templates
 --------------------------------------------------------------*/
 /* Front page */
+.contact-meta {
+  background: black; }
