added classes and contact info to footer

--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -656,5 +656,5 @@ object {
 # Page Templates
 --------------------------------------------------------------*/
 /* Front page */
-.contact-meta {
+#colophon {
   background: black; }
