added form to contactpage

--- a/themes/inhabitent/sass/_footer.scss
+++ b/themes/inhabitent/sass/_footer.scss
@@ -3,11 +3,8 @@
   background:black;
 }
 
-.footer-text-container a{
+footer-text-left{
   $color:#fff;
   text-decoration: none;
 }
 
-.fa{
-  display:inline-block;
-}
