--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -659,5 +659,9 @@ object {
 #colophon {
   background: black; }
 
-footer-text-left {
+.footer-container {
+  color: #fff;
   text-decoration: none; }
+
+.site-footer a {
+  color: #fff; }
