added background image to footer

--- a/themes/inhabitent/sass/_footer.scss
+++ b/themes/inhabitent/sass/_footer.scss
@@ -1,11 +1,11 @@
 
 #colophon{
-  background:black;
+background-image: url('../../images/dark-wood.png');
 }
 
 .footer-container{
-  color:$color__background-body;
   text-decoration: none;
+  color:$color__background-body;
 }
 
 .site-footer a{
