--- a/themes/inhabitent/sass/_variables.scss
+++ b/themes/inhabitent/sass/_variables.scss
@@ -14,6 +14,7 @@ $color__background-hr: #ccc;
 $color__background-pre: #eee;
 $color__background-ins: #fff9c0;
 $color__border-abbr: #666;
+$color_footer-brand:#d99054;
 
 $color__link: royalblue;
 $color__link-visited: purple;
