--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -658,10 +658,17 @@ object {
 /* Front page */
 #colophon {
   background-image: url("../../images/dark-wood.png"); }
+  #colophon .footer-container {
+    margin: 2.5rem;
+    -ms-flex-preferred-size: 25%;
+        flex-basis: 25%; }
+  #colophon h3 {
+    color: #d99054;
+    text-transform: uppercase; }
+  #colophon .footer-text-left {
+    color: #fff; }
+  #colophon a {
+    color: #fff; }
 
-.footer-container {
-  text-decoration: none;
-  color: #fff; }
-
-.site-footer a {
-  color: #fff; }
+.page-template-about {
+  width: 100%; }
