added single post page

--- a/themes/inhabitent/sass/_footer.scss
+++ b/themes/inhabitent/sass/_footer.scss
@@ -4,18 +4,18 @@ background-image: url('../../images/dark-wood.png');
 .footer-container{
   margin:2.5rem;
   flex-basis:25%;
+  }
 }
-  h3{
-    color:$color_footer-brand;
-    text-transform:uppercase;   
-}
+
+
   
-  .footer-text-left{
+  .site-footer{
      color:$color__background-body;
-  }
+        
+    }
 
-  a{
- color:$color__background-body;
-  }
-}
-
+  
+h3 {
+    color: red;
+    text-transform: uppercase;
+      }
