changed footer color

--- a/themes/inhabitent/sass/_footer.scss
+++ b/themes/inhabitent/sass/_footer.scss
@@ -16,6 +16,6 @@ background-image: url('../../images/dark-wood.png');
 
   
 h3 {
-    color: red;
+    color:$color_footer-brand;
     text-transform: uppercase;
-      }
+  }
