--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -689,3 +689,5 @@ h3 {
   border-bottom: 1px solid grey; }
   .menu-menu-1-container li {
     margin-left: 10px; }
+  .menu-menu-1-container a {
+    color: #248A83; }
