--- a/themes/inhabitent/sass/_variables.scss
+++ b/themes/inhabitent/sass/_variables.scss
@@ -15,6 +15,8 @@ $color__background-pre: #eee;
 $color__background-ins: #fff9c0;
 $color__border-abbr: #666;
 $color_footer-brand:#d99054;
+$color_menu-links:#248A83;
+
 
 $color__link: royalblue;
 $color__link-visited: purple;
