--- a/themes/inhabitent/sass/_header.scss
+++ b/themes/inhabitent/sass/_header.scss
@@ -6,7 +6,7 @@
   font-size:1rem;
   line-height:1.75rem;
   padding:block-end;
-  border-bottom: 1px solid grey;
+  border-bottom: 1px solid $color__border-abbr;
 
     li{
       margin-left:10px; 
