--- a/themes/inhabitent/sass/_sidebar.scss
+++ b/themes/inhabitent/sass/_sidebar.scss
@@ -1,5 +1,8 @@
 .widget-area{
   display:flex;
-  margin-left:auto;
-  margin-right:auto;
+  // justify-content:flex-end;
+  // flex-direction: column;
+  // height:100%;
+  // width:27%;
+  
 }
