added search form to header

--- a/themes/inhabitent/sass/_sidebar.scss
+++ b/themes/inhabitent/sass/_sidebar.scss
@@ -1,8 +1,5 @@
 .widget-area{
   display:flex;
-  // justify-content:flex-end;
-  // flex-direction: column;
-  // height:100%;
-  // width:27%;
-  
+  justify-content: right;
 }
+
