--- a/themes/inhabitent/sass/_variables.scss
+++ b/themes/inhabitent/sass/_variables.scss
@@ -16,6 +16,9 @@ $color__background-ins: #fff9c0;
 $color__border-abbr: #666;
 $color_footer-brand:#d99054;
 $color_menu-links:#248A83;
+$color_border-solid:#e1e1e1;
+$color-border-dashed:#c8c8c8;
+
 
 
 $color__link: royalblue;
