--- a/themes/inhabitent/sass/_header.scss
+++ b/themes/inhabitent/sass/_header.scss
@@ -6,7 +6,8 @@
   font-size:1rem;
   line-height:1.75rem;
   border-bottom: 1px solid $color__border-abbr;
-  
+  background-image: url('../../images/inhabitent-logo-tent.svg');  
+  background-size:
     li{
       margin-left:10px; 
     }
@@ -15,4 +16,8 @@
       }
   }    
 
+  
+ 
+  
+   
     
