--- a/themes/inhabitent/sass/_header.scss
+++ b/themes/inhabitent/sass/_header.scss
@@ -1,22 +1,28 @@
 .main-navigation{
   display: flex;
-  justify-content:flex-end;
+  justify-content: space-between;
   padding-left:1.5rem;
   text-transform:uppercase;
   font-size:1rem;
   line-height:1.75rem;
   border-bottom: 1px solid $color__border-abbr;
-  background-image: url('../../images/inhabitent-logo-tent.svg');  
-  background-size:
-    li{
-      margin-left:10px; 
+
+    li  {
+      margin:0 10px; 
     }
       a{
         color:$color_menu-links;
       }
+
+    .nav-logo {
+       img {
+         width: 50px;
+         height: 33px;
+       }
+    }
   }    
 
-  
+
  
   
    
