--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -656,6 +656,9 @@ object {
 # Page Templates
 --------------------------------------------------------------*/
 /* Front page */
+.home-hero {
+  background: url("../../images/home-hero.svg"); }
+
 #colophon {
   background-image: url("../../images/dark-wood.png"); }
   #colophon .footer-container {
@@ -681,15 +684,17 @@ h3 {
 .main-navigation {
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: end;
-      justify-content: flex-end;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
   padding-left: 1.5rem;
   text-transform: uppercase;
   font-size: 1rem;
   line-height: 1.75rem;
-  border-bottom: 1px solid #666;
-  background-image: url("../../images/inhabitent-logo-tent.svg");
-  background-size: li;
-    background-size-margin-left: 10px; }
+  border-bottom: 1px solid #666; }
+  .main-navigation li {
+    margin: 0 10px; }
   .main-navigation a {
     color: #248A83; }
+  .main-navigation .nav-logo img {
+    width: 50px;
+    height: 33px; }
