--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -694,3 +694,20 @@ object {
   .main-navigation .nav-logo img {
     width: 50px;
     height: 33px; }
+
+.post-type-archive div.shop-products {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  -ms-grid-rows: (1fr)[4];
+      grid-template-rows: repeat(4, 1fr);
+  grid-row-gap: 1rem;
+  grid-column-gap: 1rem; }
+  .post-type-archive div.shop-products img {
+    object-fit: cover;
+    height: 250px; }
+
+.post-type-archive .site-content {
+  margin: 0 auto;
+  width: 1120px; }
