--- a/themes/inhabitent/sass/_header.scss
+++ b/themes/inhabitent/sass/_header.scss
@@ -6,6 +6,7 @@
   font-size:1rem;
   line-height:1.75rem;
   border-bottom: 1px solid $color__border-abbr;
+  flex-basis:20%;
 
     li  {
       margin:0 10px; 
