--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -5,6 +5,22 @@
 /* Front page */
 
 
-.home-hero{
- background:url('../../images/home-hero.svg');  
+.hero-image{
+ background:url('../../images/home-hero.jpg');  
+ height: 100vh;
+ background-size: cover;
+ display: flex;
+ justify-content: center;
+ align-items: center;
   }
+
+.shop-items-container{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  grid-column-gap: 1rem;
+  width:1120px;
+}
+
+.shop-stuff-header{
+  text-transform: uppercase;
+}
