--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -656,8 +656,27 @@ object {
 # Page Templates
 --------------------------------------------------------------*/
 /* Front page */
-.home-hero {
-  background: url("../../images/home-hero.svg"); }
+.hero-image {
+  background: url("../../images/home-hero.jpg");
+  height: 100vh;
+  background-size: cover;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center; }
+
+.shop-items-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  grid-column-gap: 1rem;
+  width: 1120px; }
+
+.shop-stuff-header {
+  text-transform: uppercase; }
 
 #colophon {
   background-image: url("../../images/dark-wood.png"); }
@@ -686,7 +705,9 @@ object {
   text-transform: uppercase;
   font-size: 1rem;
   line-height: 1.75rem;
-  border-bottom: 1px solid #666; }
+  border-bottom: 1px solid #666;
+  -ms-flex-preferred-size: 20%;
+      flex-basis: 20%; }
   .main-navigation li {
     margin: 0 10px; }
   .main-navigation a {
