--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -8,10 +8,11 @@
 .hero-image{
  background:url('../../images/home-hero.jpg');  
  height: 100vh;
- background-size: cover;
+ background-size:cover;
  display: flex;
  justify-content: center;
  align-items: center;
+ width:100%;
   }
 
 .shop-items-container{
@@ -23,4 +24,7 @@
 
 .shop-stuff-header{
   text-transform: uppercase;
+  text-align: center;
+  font-size:2.4rem;
+  margin-bottom:3.75rem;
 }
