--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -4,6 +4,16 @@
 
 /* Posts and pages */
 
+.site-content{
+  display: flex;
+  width:100vw;
+  min-height: 800px;
+}
+
+.content-area{
+  flex: 3 1 80%;
+}
+
 .sticky {
 	display: block;
 }
