--- a/themes/inhabitent/sass/_header.scss
+++ b/themes/inhabitent/sass/_header.scss
@@ -1,3 +1,4 @@
+
 .main-navigation{
   display: flex;
   justify-content: space-between;
@@ -6,11 +7,9 @@
   font-size:1rem;
   line-height:1.75rem;
   border-bottom: 1px solid $color__border-abbr;
-  flex-basis:20%;
+  
 
-    li  {
-      margin:0 10px; 
-    }
+  
       a{
         color:$color_menu-links;
       }
@@ -25,6 +24,13 @@
 
 
  
-  
+  .main-nav {
+  //  flex: 0 60%; 
+   display: flex;
+   align-items: center;
+      li{
+       padding:0 10px; 
+      }
+  }
    
     
