--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -558,6 +558,16 @@ a {
 # Content
 --------------------------------------------------------------*/
 /* Posts and pages */
+.site-content {
+  display: -ms-flexbox;
+  display: flex;
+  width: 100vw;
+  min-height: 800px; }
+
+.content-area {
+  -ms-flex: 3 1 80%;
+      flex: 3 1 80%; }
+
 .sticky {
   display: block; }
 
@@ -687,15 +697,18 @@ object {
   #colophon .footer-container {
     margin: 2.5rem;
     -ms-flex-preferred-size: 25%;
-        flex-basis: 25%; }
+        flex-basis: 25%;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: justify;
+        justify-content: space-between; }
   #colophon h3 {
     color: #d99054;
     text-transform: uppercase; }
 
-.site-content {
-  display: -ms-flexbox;
-  display: flex;
-  width: 80%; }
+.widget-area {
+  -ms-flex: 1 3 20%;
+      flex: 1 3 20%; }
 
 .main-navigation {
   display: -ms-flexbox;
@@ -706,16 +719,20 @@ object {
   text-transform: uppercase;
   font-size: 1rem;
   line-height: 1.75rem;
-  border-bottom: 1px solid #666;
-  -ms-flex-preferred-size: 20%;
-      flex-basis: 20%; }
-  .main-navigation li {
-    margin: 0 10px; }
+  border-bottom: 1px solid #666; }
   .main-navigation a {
     color: #248A83; }
   .main-navigation .nav-logo img {
     width: 50px;
     height: 33px; }
+
+.main-nav {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center; }
+  .main-nav li {
+    padding: 0 10px; }
 
 .post-type-archive div.shop-products {
   display: -ms-grid;
