--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -693,18 +693,32 @@ object {
   margin-bottom: 3.75rem; }
 
 #colophon {
-  background-image: url("../../images/dark-wood.png"); }
+  background-image: url("../../images/dark-wood.png");
+  height: auto; }
   #colophon .footer-container {
-    margin: 2.5rem;
+    margin: 3rem;
     -ms-flex-preferred-size: 25%;
         flex-basis: 25%;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-pack: justify;
-        justify-content: space-between; }
+        justify-content: space-between;
+    color: #fff;
+    line-height: 1.75; }
   #colophon h3 {
     color: #d99054;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    margin-top: 3rem; }
+  #colophon img {
+    width: 60%;
+    margin-top: 3rem; }
+
+.copyright {
+  margin-left: 560px;
+  padding: 3rem;
+  width: 1120px;
+  text-transform: uppercase;
+  color: #fff; }
 
 .widget-area {
   -ms-flex: 1 3 20%;
