--- a/themes/inhabitent/sass/_header.scss
+++ b/themes/inhabitent/sass/_header.scss
@@ -22,7 +22,6 @@
 
  
   .main-nav {
-  //  flex: 0 60%; 
    display: flex;
    align-items: center;
       li{
@@ -30,4 +29,12 @@
       }
   }
    
-    
+fieldset{
+  border:none;
+}
+
+button{
+  background:white;
+  border:none;
+  box-shadow:none;
+}
