--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -748,6 +748,14 @@ object {
   .main-nav li {
     padding: 0 10px; }
 
+fieldset {
+  border: none; }
+
+button {
+  background: white;
+  border: none;
+  box-shadow: none; }
+
 .post-type-archive div.shop-products {
   display: -ms-grid;
   display: grid;
