--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -751,7 +751,7 @@ object {
 fieldset {
   border: none; }
 
-button {
+header button {
   background: white;
   border: none;
   box-shadow: none; }
