--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -28,3 +28,14 @@
   font-size:2.4rem;
   margin-bottom:3.75rem;
 }
+
+.category-item{
+  border:$border_solid;
+  width:auto;
+    img{
+      height: 70px;
+      max-width:100%;
+      margin-left:107px;
+    
+    }
+}
