--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -692,6 +692,14 @@ object {
   font-size: 2.4rem;
   margin-bottom: 3.75rem; }
 
+.category-item {
+  border: 1px solid #e1e1e1;
+  width: auto; }
+  .category-item img {
+    height: 70px;
+    max-width: 100%;
+    margin-left: 107px; }
+
 #colophon {
   background-image: url("../../images/dark-wood.png");
   height: auto; }
