styled shop stuff section on front page

--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -57,3 +57,10 @@
 .bypostauthor {
 	display: block;
 }
+
+button{
+	background:#248A83;
+	box-shadow:none;
+	font-size:$font_size;
+	text-transform:uppercase;
+}
