--- a/themes/inhabitent/sass/_variables.scss
+++ b/themes/inhabitent/sass/_variables.scss
@@ -33,7 +33,9 @@ $font__pre: "Courier 10 Pitch", Courier, monospace;
 $font__line-height-body: 1.5;
 $font__line-height-footer: 1.75;
 $font__line-height-pre: 1.6;
+$font_size:16px;
 
 //border
 
 $border_solid:1px solid #e1e1e1
+
