--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -602,6 +602,12 @@ a {
 .bypostauthor {
   display: block; }
 
+button {
+  background: #248A83;
+  box-shadow: none;
+  font-size: 16px;
+  text-transform: uppercase; }
+
 /*--------------------------------------------------------------
 # Media
 --------------------------------------------------------------*/
@@ -684,7 +690,8 @@ object {
   -ms-grid-columns: (1fr)[4];
       grid-template-columns: repeat(4, 1fr);
   grid-column-gap: 1rem;
-  width: 1120px; }
+  width: 1120px;
+  margin-left: 80px; }
 
 .shop-stuff-header {
   text-transform: uppercase;
@@ -694,11 +701,24 @@ object {
 
 .category-item {
   border: 1px solid #e1e1e1;
-  width: auto; }
+  width: auto;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 1rem; }
   .category-item img {
     height: 70px;
     max-width: 100%;
-    margin-left: 107px; }
+    -ms-flex-item-align: auto;
+        -ms-grid-row-align: auto;
+        align-self: auto; }
+  .category-item a {
+    color: white;
+    margin-left: auto;
+    text-decoration: none; }
 
 #colophon {
   background-image: url("../../images/dark-wood.png");
