--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -50,3 +50,18 @@
         text-decoration: none;
       }
 }
+
+.journal{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-column-gap: 1rem;
+  width:1120px;
+  margin-left:80px;
+}
+
+.inhabitent-joural-header{
+  text-transform: uppercase;
+  text-align: center;
+  font-size:2.4rem;
+  margin-bottom:3.75rem;
+}
