--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -720,6 +720,21 @@ object {
     margin-left: auto;
     text-decoration: none; }
 
+.journal {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 1rem;
+  width: 1120px;
+  margin-left: 80px; }
+
+.inhabitent-joural-header {
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 2.4rem;
+  margin-bottom: 3.75rem; }
+
 #colophon {
   background-image: url("../../images/dark-wood.png");
   height: auto; }
