--- a/themes/inhabitent/sass/_footer.scss
+++ b/themes/inhabitent/sass/_footer.scss
@@ -20,9 +20,12 @@ height:auto;
         width:60%;
         margin-top:3rem;
       }
-    
 }
 
+.media-icon{
+  display:flex;
+  justify-content: space-between;
+    }
 
 .copyright {
   margin-left:560px;
