--- a/themes/inhabitent/sass/_fonts.scss
+++ b/themes/inhabitent/sass/_fonts.scss
@@ -3,10 +3,10 @@
 
 
 @font-face {
-  font-family: 'merriweatherbold';
-  src: url('merriweather-bold-webfont.woff2') format('woff2'),
-       url('merriweather-bold-webfont.woff') format('woff');
-  font-weight: normal;
+  font-family: 'merriweather';
+  src: url('../../fonts/merriweather-bold-webfont.woff2') format('woff2'),
+       url('../../fonts/merriweather-bold-webfont.woff') format('woff');
+  font-weight: bold;
   font-style: normal;
 
 }
@@ -15,10 +15,22 @@
 
 
 @font-face {
-  font-family: 'merriweatherbold_italic';
-  src: url('merriweather-bolditalic-webfont.woff2') format('woff2'),
-       url('merriweather-bolditalic-webfont.woff') format('woff');
-  font-weight: normal;
+  font-family: 'merriweather';
+  src: url('../../fonts/merriweather-bolditalic-webfont.woff2') format('woff2'),
+       url('../../fonts/merriweather-bolditalic-webfont.woff') format('woff');
+  font-weight: bold;
+  font-style: italic;
+
+}
+
+
+
+
+@font-face {
+  font-family: 'merriweather';
+  src: url('../../fonts/merriweather-light-webfont.woff2') format('woff2'),
+       url('../../fonts/merriweather-light-webfont.woff') format('woff');
+  font-weight: 300;
   font-style: normal;
 
 }
@@ -27,22 +39,10 @@
 
 
 @font-face {
-  font-family: 'merriweatherlight';
-  src: url('merriweather-light-webfont.woff2') format('woff2'),
-       url('merriweather-light-webfont.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-
-}
-
-
-
-
-@font-face {
-  font-family: 'merriweatherlight_italic';
-  src: url('merriweather-lightitalic-webfont.woff2') format('woff2'),
-       url('merriweather-lightitalic-webfont.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
+  font-family: 'merriweather';
+  src: url('../../fonts/merriweather-lightitalic-webfont.woff2') format('woff2'),
+       url('../../fonts/merriweather-lightitalic-webfont.woff') format('woff');
+  font-weight: 300;
+  font-style: italic;
 
 }
