--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -64,6 +64,8 @@
   text-align: center;
   font-size:2.4rem;
   margin-bottom:3.75rem;
+  font-family:Novecento Sans Web,sans-serif;
+  
 }
 
 //archive product
