--- a/themes/inhabitent/sass/_variables.scss
+++ b/themes/inhabitent/sass/_variables.scss
@@ -34,7 +34,7 @@ $font__line-height-body: 1.5;
 $font__line-height-footer: 1.75;
 $font__line-height-pre: 1.6;
 $font_size:16px;
-
+$color:#fff;
 //border
 
 $border_solid:1px solid #e1e1e1
