--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -1,5 +1,5 @@
 /*!
-Theme Name: Inhabitent
+Theme Name: RED Starter Theme
 Theme URI: http://underscores.me/
 Author: RED Academy
 Author URI: http://www.redacademy.com
@@ -781,14 +781,16 @@ object {
 ul {
   list-style-type: none; }
 
+.journal-container {
+  position: relative; }
+
 .journal-title {
   background: #248A83;
   box-shadow: none;
   font-size: 16px;
   text-transform: uppercase;
   color: #fff;
-  margin-top: 1rem;
-  position: relative; }
+  margin-top: 1rem; }
   .journal-title a {
     color: #fff; }
 
