--- a/themes/inhabitent/sass/_footer.scss
+++ b/themes/inhabitent/sass/_footer.scss
@@ -33,9 +33,12 @@ height:auto;
   width:1120px;
   text-transform: uppercase;
   color:$color__background-body;
-
 }
 
+.site-footer a{
+  text-decoration: none;
+  color:$color;
+}
   
  
     
