--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -884,6 +884,10 @@ header button {
   border: none;
   box-shadow: none; }
 
+.search-field {
+  width: 0;
+  border: none; }
+
 .post-type-archive div.shop-products {
   display: -ms-grid;
   display: grid;
