--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -4,6 +4,10 @@
 
 /* Front page */
 
+.main-navigation{
+position: relative;
+z-index:9000;
+}
 
 .hero-image{
  background:url('../../images/home-hero.jpg');  
