styled adventure section

--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -769,6 +769,34 @@ object {
   font-size: 2.4rem;
   margin-bottom: 3.75rem; }
 
+.adventure-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (2fr, 2, 1fr)[1];
+      grid-template-columns: repeat(1, 2fr, 2, 1fr); }
+
+.canoe {
+  background: url(../../images/canoe-girl.jpg) center;
+  background-size: cover;
+  height: 100%;
+  width: 100%; }
+
+.beach {
+  background: url(../../images/beach-bonfire.jpg) center;
+  background-size: cover;
+  height: 100%;
+  width: 50%; }
+
+.mountain {
+  background: url(../../images/mountain-hikers.jpg) center;
+  height: 100%;
+  width: 25%; }
+
+.star {
+  background: url(../../images/night-sky.jpg) center;
+  height: 100%;
+  width: 25%; }
+
 .product-types {
   display: -ms-flexbox;
   display: flex;
@@ -894,6 +922,9 @@ header button {
 .search-field {
   width: 0;
   border: none; }
+
+.slow {
+  width: 100px; }
 
 .post-type-archive div.shop-products {
   display: -ms-grid;
