--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -79,7 +79,36 @@ z-index:9000;
   
 }
 
+.adventure-container{
+  display:grid;
+  grid-template-columns: repeat(1,2fr,2,1fr);
+}
 
+.canoe{
+  background:url(../../images/canoe-girl.jpg) center;
+  background-size:cover;
+  height: 100%;
+  width:100%;
+}
+
+.beach{
+  background: url(../../images/beach-bonfire.jpg) center;
+  background-size:cover;
+  height:100%;
+  width:50%;
+}
+
+.mountain{
+  background:url(../../images/mountain-hikers.jpg) center;
+  height:100%;
+  width:25%;
+}
+
+.star{
+  background:url(../../images/night-sky.jpg) center;
+  height:100%;
+  width:25%;
+}
 
 
 
