--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -42,6 +42,7 @@ z-index:9000;
   justify-content: center;
   flex-wrap: wrap;
   padding:1rem;
+ 
   
     img{
       height: 70px;
@@ -62,6 +63,11 @@ z-index:9000;
   grid-column-gap: 1rem;
   width:1120px;
   margin-left:80px;
+  margin-right:80px;
+    img{
+      height: 244px;
+      width:100%;
+    }
 }
 
 .inhabitent-joural-header{
@@ -83,7 +89,7 @@ z-index:9000;
   display:grid;
   grid-template-columns: 50% 25% 25%;
   grid-template-rows: 50% 50%;
-  height:593px;
+  height:600px;
   grid-gap:1rem;
 }
 
