--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -755,7 +755,11 @@ object {
       grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 1rem;
   width: 1120px;
-  margin-left: 80px; }
+  margin-left: 80px;
+  margin-right: 80px; }
+  .journal img {
+    height: 244px;
+    width: 100%; }
 
 .inhabitent-joural-header {
   text-transform: uppercase;
@@ -776,7 +780,7 @@ object {
       grid-template-columns: 50% 25% 25%;
   -ms-grid-rows: 50% 50%;
       grid-template-rows: 50% 50%;
-  height: 593px;
+  height: 600px;
   grid-gap: 1rem; }
 
 .canoe {
