--- a/themes/inhabitent/sass/_header.scss
+++ b/themes/inhabitent/sass/_header.scss
@@ -34,11 +34,11 @@ fieldset{
   border:none;
 }
 
-header button{
-  background:white;
-  border:none;
-  box-shadow:none;
-}
+// header button{
+//   background:white;
+//   border:none;
+//   box-shadow:none;
+// }
 
 
 .search-field{
@@ -48,4 +48,8 @@ header button{
 
 .slow{
   width:100px;
+}
+
+.search-submit{
+  display:none;
 }
