--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -923,17 +923,15 @@ ul {
 fieldset {
   border: none; }
 
-header button {
-  background: white;
-  border: none;
-  box-shadow: none; }
-
 .search-field {
   width: 0;
   border: none; }
 
 .slow {
   width: 100px; }
+
+.search-submit {
+  display: none; }
 
 .post-type-archive div.shop-products {
   display: -ms-grid;
