styled read more button on front page

--- a/themes/inhabitent/sass/_footer.scss
+++ b/themes/inhabitent/sass/_footer.scss
@@ -32,7 +32,7 @@ height:auto;
 }
 
 .copyright {
-  margin-left:560px;
+  text-align: center;
   padding:3rem;
   width:1120px;
   text-transform: uppercase;
