--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -81,6 +81,20 @@ z-index:9000;
   margin-bottom:3.75rem; 
 }
 
+.read-entry{
+  a{
+    border:1px solid black;
+    background-color:transparent;
+    text-decoration: none;
+    text-transform:uppercase;
+    font-size:1rem; 
+    line-height: 1.5rem;
+    color:black;
+    padding:1rem;
+  }
+}
+    
+
 .adventure{
   text-transform: uppercase;
   text-align: center;
@@ -149,7 +163,7 @@ ul{
 // journal
 
 .journal-container{
-  position:relative;
+  position:relative
 }
 
 .journal-title{
@@ -159,7 +173,8 @@ ul{
   text-transform:uppercase;
   color:$color;
   margin-top:1rem;
-  // position:absolute;
+  position: relative;
+  top:0;
     a{
       color:$color;
     }
