--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -4,10 +4,6 @@
 
 /* Front page */
 
-.main-navigation{
-position: relative;
-z-index:9000;
-}
 
 .hero-image{
  background:url('../../images/home-hero.jpg');  
@@ -31,8 +27,10 @@ z-index:9000;
 .shop-stuff-header{
   text-transform: uppercase;
   text-align: center;
-  font-size:2.4rem;
+  font-size:1.5rem;
   margin-bottom:3.75rem;
+  font-weight:100;
+  font-family:novecento Sans Web, sans serif;
 }
 
 .category-item{
@@ -80,6 +78,15 @@ z-index:9000;
   font-size:2.4rem;
   margin-bottom:3.75rem; 
 }
+
+.journal-box{
+  border:1px solid black;
+  height:auto;
+  padding:21px;
+}
+
+
+
 
 .read-entry{
   a{
