--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -126,10 +126,7 @@
 }
       
     
-  
-  
-
-    
+//adventure pictures
 
 .adventure{
   text-transform: uppercase;
@@ -145,6 +142,16 @@
   grid-template-rows: 50% 50%;
   height:600px;
   grid-gap:1rem;
+  letter-spacing:2px;
+    p{
+      color:$color;
+      background-color:transparent;
+      display:inline;
+      font-size:3rem;
+    }
+      button{
+       padding:21px;
+      }
 }
 
 .canoe{
@@ -153,6 +160,7 @@
   height: 100%;
   width:100%;
   grid-row-start:span 2;
+    
 }
 
 .beach{
@@ -160,6 +168,7 @@
   background-size:cover;
   height:100%;
   grid-column-start:span 2;
+  
 }
 
 .mountain{
