--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -260,7 +260,8 @@ textarea {
 
 /* Headings */
 h1, h2, h3, h4, h5, h6 {
-  clear: both; }
+  clear: both;
+  font-weight: normal; }
 
 /* Copy */
 p {
@@ -430,11 +431,12 @@ textarea {
 --------------------------------------------------------------*/
 /* Links */
 a {
-  color: royalblue; }
+  color: #248A83;
+  text-decoration: none; }
   a:visited {
-    color: purple; }
+    color: #19625d; }
   a:hover, a:focus, a:active {
-    color: midnightblue; }
+    color: #19625d; }
   a:focus {
     outline: thin dotted; }
   a:hover, a:active {
@@ -624,14 +626,6 @@ a {
 
 .bypostauthor {
   display: block; }
-
-button {
-  background: #248A83;
-  box-shadow: none;
-  font-size: 16px;
-  text-transform: uppercase; }
-  button a {
-    color: #fff; }
 
 /*--------------------------------------------------------------
 # Media
