--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -627,6 +627,12 @@ a {
 .bypostauthor {
   display: block; }
 
+button {
+  background: #248A83;
+  box-shadow: none;
+  font-size: 16px;
+  text-transform: uppercase; }
+
 /*--------------------------------------------------------------
 # Media
 --------------------------------------------------------------*/
@@ -716,9 +722,7 @@ object {
   text-transform: uppercase;
   text-align: center;
   font-size: 1.5rem;
-  margin-bottom: 3.75rem;
-  font-weight: 100;
-  font-family: novecento Sans Web, sans serif; }
+  margin-bottom: 3.75rem; }
 
 .category-item {
   border: 1px solid #e1e1e1;
@@ -945,6 +949,38 @@ ul {
 .site-footer a {
   text-decoration: none;
   color: #fff; }
+
+.about-title {
+  height: 100vh;
+  text-transform: uppercase;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  position: relative;
+  font-size: 3rem;
+  font-weight: bold;
+  color: #f1f1f1; }
+  .about-title .entry-title {
+    -ms-flex-align: center;
+        align-items: center;
+    position: absolute; }
+
+.entry-content {
+  height: 100vh;
+  width: 1120px;
+  margin-left: auto;
+  margin-right: auto; }
+  .entry-content h2 {
+    font-size: 2.5rem;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
+    margin-top: 50px; }
+  .entry-content p {
+    font-size: 1rem;
+    line-height: 1.75;
+    font-weight: light; }
 
 .widget-area {
   -ms-flex: 1 3 20%;
